<resources>
    <!-- oauth -->
    <string name="servr_client_id">468641700472-tnritscfo840jcce0qd43qorbl192se5.apps.googleusercontent.com</string>

    <string name="app_name">Meazer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Globals -->
    <string name="conn_to_srv">Connecting...</string>
    <string name="please_wait">Please wait...</string>
    <string name="retrieving_data">Retrieving user data...</string>
    <string name="connection_error">Connection error</string>
    <string name="try_to_reconnect">Please try to reconnect</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="translated_message">Translated message</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="translation">Translation</string>
    <string name="language">Language</string>
    <string name="contact_added_successfully">Contact Added Sucessfully</string>

    <!-- LoginActivity -->
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_type_email_pass">Please type your email and password</string>
    <string name="connection_finished">Connection finished</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_failed">Sorry! Login failed. \nPlease check your internet connection</string>

    <!-- MainActivity -->
    <string name="exit">Exit</string>
    <string name="backup">Backup</string>
    <string name="activeChats">Meazer</string>
    <string name="noActiveChatsFound">This is the list of your current chats.\nYou didn\'t started any chat yet.\nYou can go to your contact list and start chatting with them!</string>


    <!-- ContactsActivity -->
    <string name="contacts">Contacts</string>

    <!-- RegisterActivity -->
    <string name="registerActivity">Sign up</string>
    <!-- SearchContactActivity -->
    <string name="searchContacts">Contact Search</string>
    <!-- ContactDetailsActivity -->
    <string name="contactDetails">Contacts Details</string>

    <!-- RegisterActivity -->
    <string name="sorry_an_error_occured">Sorry! An error occured. \nPlease check your internet connection and try again</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="new_user">New User</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="password_dont_match">Password do not match</string>
    <string name="user_registered_successfully">User registered successfully</string>
</resources>
