<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.chatup.tcc.activity.RegisterActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtName_Register"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imgViewUser"
                android:layout_centerHorizontal="true"
                android:hint="@string/name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtUsername_Register"
                android:layout_below="@+id/edtName_Register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edtEmail_Register"
                android:layout_below="@+id/edtUsername_Register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtPassword_Register"
                android:layout_below="@+id/edtEmail_Register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtRepeatPassword_Register"
                android:layout_below="@+id/edtPassword_Register"
                android:layout_alignEnd="@+id/edtPassword_Register"
                android:layout_marginTop="20dp"
                android:hint="@string/repeat_password" />

            <Button
                android:text="@string/confirm"
                android:id="@+id/btnSubmit_Register"
                android:layout_below="@+id/edtRepeatPassword_Register"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:onClick="btnSubmitClick"
                android:layout_marginTop="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgViewUser"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/user" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
