<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context="br.chatup.tcc.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername_Login"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:hint="@string/username"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/edtPassword_Login"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:hint="@string/password"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnLogin_LoginActivity"
                android:textSize="@dimen/meddium_text"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:textSize="@dimen/meddium_text"
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:textColor="@color/white"
                android:background = "@color/colorPrimaryDark"
                android:onClick="btnRegisterClick"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>